--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,6 +18,13 @@
   <img src="./assets/imgs/logo-kinetik.jpg" alt="" class="logo-kinetik" (click)="entrar()">
 
   <p class="sistema2">Pulse cualquiera de los logos para acceder al sistema.</p>
-  
 
-</ion-content> 
+  <button type="button" class="ad2hs-prompt" *ngIf="showButton" (click)="addToHomeScreen()">Instalar aplicación Web</button>
+  <div class="ios-prompt" *ngIf="showIosInstall" (click)="showIosInstall = false;">
+    <span style="color: rgb(187, 187, 187); float: right; margin-top: -10px; margin-right: -7px;">&times;</span>
+    <img src="assets/imgs/add2home.svg" style="float: left; height: 80px; width: auto; margin-top: -4px; margin-right: 1rem;">
+    <p style="margin-top: 0.4rem; line-height: 1.8rem;">Para instalar esta aplicación Web en tu iPhone/iPad presiona <img src="assets/imgs/share.svg" style="display: inline-block; margin-top: 4px; margin-bottom: -4px; height: 20px; width: auto;"> y luego Agregar a Inicio.</p>
+  </div>
+
+
+</ion-content>
